feat: add release 2

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,9 @@ jobs:
     permissions:
         contents: write # to be able to publish a GitHub release
         issues: write # to be able to comment on released issues
+        id-token: write # needed for keyless signing
         pull-requests: write # to be able to comment on released pull requests
+        packages: write # needed for ghcr access
     steps:
       - name: Checkout
         uses: actions/checkout@v3
