--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -4,7 +4,10 @@ branches:
 preset: angular
 plugins:
   - "@semantic-release/commit-analyzer"
-  - "@semantic-release/release-notes-generator"
+  - - "@semantic-release/release-notes-generator"
+    - preset: angular
+      writerOpts:
+        commitsSort: ["subject", "scope"]
   - "@semantic-release/git"
   - - "@semantic-release/exec"
     - publishCmd: |
