--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,20 @@ permissions:
     contents: read
 
 jobs:
+  generate-changelog:
+    # run only on tag events
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Generate Changelog
+      uses: docker://githubchangeloggenerator/github-changelog-generator:v1.16.4
+      env:
+        CHANGELOG_GITHUB_TOKEN: ${{ secrets.CHANGELOG_GITHUB_TOKEN }}
+      with:
+        args: --user ${GITHUB_REPOSITORY%/*} --project ${GITHUB_REPOSITORY#*/}
   goreleaser:
     runs-on: ubuntu-latest
     permissions:
