--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,31 +9,41 @@ on:
   pull_request:
 
 permissions:
-    contents: read
+  contents: read
 
 jobs:
   generate-changelog:
     # run only on tag events
-    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Generate Changelog
-      uses: docker://githubchangeloggenerator/github-changelog-generator:v1.16.4
-      env:
-        CHANGELOG_GITHUB_TOKEN: ${{ secrets.CHANGELOG_GITHUB_TOKEN }}
-      with:
-        args: --user ${GITHUB_REPOSITORY%/*} --project ${GITHUB_REPOSITORY#*/}
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Generate Changelog
+        uses: docker://githubchangeloggenerator/github-changelog-generator:v1.16.4
+        env:
+          CHANGELOG_GITHUB_TOKEN: ${{ secrets.CHANGELOG_GITHUB_TOKEN }}
+        with:
+          args: --user ${GITHUB_REPOSITORY%/*} --project ${GITHUB_REPOSITORY#*/}
+      - name: Commit files
+        run: |
+          git config --local user.email "changelog[bot]@users.noreply.github.com"
+          git config --local user.name "changelog[bot]"
+          git commit -a -m "docs: update changelog"
+      - name: Push changes
+        uses: ad-m/github-push-action@v0.8.0
+        with:
+          github_token: ${{ secrets.CHANGELOG_GITHUB_TOKEN }}
+          force_with_lease: true
   goreleaser:
     runs-on: ubuntu-latest
     permissions:
-        contents: write # to be able to publish a GitHub release
-        issues: write # to be able to comment on released issues
-        id-token: write # needed for keyless signing
-        pull-requests: write # to be able to comment on released pull requests
-        packages: write # needed for ghcr access
+      contents: write # to be able to publish a GitHub release
+      issues: write # to be able to comment on released issues
+      id-token: write # needed for keyless signing
+      pull-requests: write # to be able to comment on released pull requests
+      packages: write # needed for ghcr access
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -44,13 +54,13 @@ jobs:
       - name: Install GoReleaser
         uses: goreleaser/goreleaser-action@v4
         with:
-            install-only: true
+          install-only: true
       - name: Show GoReleaser version
         run: goreleaser -v
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3
         env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           extra_plugins: |
             @semantic-release/git
