--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           git config --local user.email "changelog[bot]@users.noreply.github.com"
           git config --local user.name "changelog[bot]"
-          git commit -a -m "docs: update changelog"
+          git commit -a -m "chore(docs): update changelog"
       - name: Push changes
         uses: ad-m/github-push-action@v0.8.0
         with:
