--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,6 +49,8 @@ jobs:
           github_token: ${{ secrets.CHANGELOG_GITHUB_TOKEN }}
   goreleaser:
     runs-on: ubuntu-latest
+    needs:
+      - generate-changelog
     permissions:
       contents: write # to be able to publish a GitHub release
       issues: write # to be able to comment on released issues
