--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,12 +56,12 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - generate-changelog
-    permissions:
-      contents: write # to be able to publish a GitHub release
-      issues: write # to be able to comment on released issues
-      id-token: write # needed for keyless signing
-      pull-requests: write # to be able to comment on released pull requests
-      packages: write # needed for ghcr access
+    # permissions:
+    #   contents: write # to be able to publish a GitHub release
+    #   issues: write # to be able to comment on released issues
+    #   id-token: write # needed for keyless signing
+    #   pull-requests: write # to be able to comment on released pull requests
+    #   packages: write # needed for ghcr access
     steps:
       - name: Checkout
         uses: actions/checkout@v3
