feat: check tag release 3

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -2,6 +2,7 @@ branches:
   - master
   - main
 preset: angular
+repositoryUrl: https://github.com/karlderkaefer/golang-example-project
 plugins:
   - "@semantic-release/commit-analyzer"
   - - "@semantic-release/release-notes-generator"
