--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,6 +80,7 @@ jobs:
         uses: cycjimmy/semantic-release-action@v3
         env:
           GITHUB_TOKEN: ${{ secrets.CHANGELOG_GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.CHANGELOG_GITHUB_TOKEN }}
         with:
           extra_plugins: |
             @semantic-release/git
