--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ jobs:
   generate-changelog:
     # run only on tag events
     runs-on: ubuntu-latest
+    needs: 
+      - goreleaser
     steps:
       # print the github event and the tag
       - name: Print GitHub event and tag
@@ -54,8 +56,6 @@ jobs:
           github_token: ${{ secrets.CHANGELOG_GITHUB_TOKEN }}
   goreleaser:
     runs-on: ubuntu-latest
-    needs:
-      - generate-changelog
     # permissions:
     #   contents: write # to be able to publish a GitHub release
     #   issues: write # to be able to comment on released issues
