--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - "main"
+    tags:
+      - "v*"
   pull_request:
 
 env:
@@ -85,38 +87,40 @@ jobs:
   #         if-no-files-found: error
   #         retention-days: 1
   
-  # docker-build:
-  #   name: Build multi-platform Docker image
-  #   runs-on: ubuntu-20.04
-  #   permissions:
-  #     packages: write
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: docker/setup-qemu-action@v3
-  #     - uses: docker/setup-buildx-action@v3
-  #     - name: Docker meta
-  #       id: meta
-  #       uses: docker/metadata-action@v5
-  #       with:
-  #         images: ${{ env.REGISTRY_IMAGE }}
-  #         tags: |
-  #           type=ref,event=pr
-  #           type=semver,pattern={{version}}
-  #           type=semver,pattern={{major}}.{{minor}}
-  #           type=semver,pattern={{major}}
-  #           type=raw,value=latest,enable=${{ github.ref_name == 'main' }}
-  #     - name: Login to container Registry
-  #       uses: docker/login-action@v3
-  #       with:
-  #         username: ${{ github.repository_owner }}
-  #         password: ${{ secrets.GITHUB_TOKEN }}
-  #         registry: ghcr.io
-  #     - uses: docker/build-push-action@v5
-  #       with:
-  #         context: .
-  #         platforms: linux/amd64,linux/arm64
-  #         cache-from: type=gha
-  #         cache-to: type=gha,mode=max
+  docker-build:
+    name: Build multi-platform Docker image
+    runs-on: ubuntu-20.04
+    permissions:
+      packages: write
+    steps:
+      - uses: actions/checkout@v3
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY_IMAGE }}
+          tags: |
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=raw,value=latest,enable=${{ github.ref_name == 'main' }}
+      - name: Login to container Registry
+        uses: docker/login-action@v3
+        with:
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ghcr.io
+      - uses: docker/build-push-action@v5
+        with:
+          context: .
+          # push only on main or on tags
+          push: ${{ github.ref_name == 'main' || startsWith(github.ref, 'refs/tags/') }}
+          platforms: linux/amd64,linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
 
 
