--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
             type=semver,pattern={{major}}
             type=raw,value=latest,enable=${{ github.ref_name == 'main' }}
       - name: Login to container Registry
+        if: ${{ (github.ref_name == 'main' || startsWith(github.ref, 'refs/tags/')) && github.repository_owner == 'karlderkaefer' }}
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -55,7 +56,7 @@ jobs:
         with:
           context: .
           # push only on main or on tags
-          push: ${{ github.ref_name == 'main' || startsWith(github.ref, 'refs/tags/') }}
+          push: ${{ (github.ref_name == 'main' || startsWith(github.ref, 'refs/tags/')) && github.repository_owner == 'karlderkaefer' }}
           platforms: linux/amd64,linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
