--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       packages: write
+      security-events: write
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-qemu-action@v3
