fix(ci): use gz format

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -22,7 +22,7 @@ archives:
       {{- .Os }}_
       {{- .Arch }}{{ with .Arm }}v{{ . }}{{ end }}
     files:
-      - "{{ .Binary }}"  # Include only the binary itself
+      - "**/{{ .Binary }}*"  # Include only the binary itself
 checksum:
   name_template: "checksums.txt"
 snapshot:
